# calculator

./: CMakeLists.txt  calculator.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
